# psytican-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md\  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: cd.yaml  ci.yaml  pre-build-checks.yaml  semantic-release.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap-config.yaml  configmap-configfiles.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: config.py  main.py
src/configs/: config.py  user_conf.py
src/google_api/: gcalendar.py
src/metrics/: __init__.py  bot_info_metrics.py
src/models/: base_schema.py
src/models/calendar/: event.py  event_meta.py
src/telegram/: bot_persistence.py  common.py  redispesistence.py  tg_acl.py  tg_calendar.py  tg_wrapper.py  utils.py
src/utils/: convert.py  logger.py
tests/src/models/: test_fail_date_and_date_time_0.py  test_fail_end_date_earlier_than_start_0.py
tests/src/telegram/: test_tg_calendar.py  test_tg_wrapper.py  test_utils.py
tests/src/telegram/cases/success/: success_event_list_model_render_0.py
tests/src/utils/: test_date_parser.py
