[tool.poetry]
name = "psytican-bot"
version = "0.1.0-alpha.1"
description = "Psytican Helper bot"
authors = ["Igor I Shatunov <genesis@psytican.com>"]
license = "MIT"
readme = "README.md"
packages = [ {include = "src"}, ]

[tool.poetry.scripts]
psytican-bot = "src.main:main"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.123.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
python-telegram-bot = {extras = ["job-queue"], version = "^21.5"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pydantic-settings-vault = "^2.0.0"
furl = "^2.1.3"
oauth2client = "^4.1.3"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
starlette-prometheus = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.3.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.24.0"
pylint = "^3.2.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
